modified:   .env 	modified:   app.js 	modified:   controllers/booking.controller.js 	modified:   routes/booking.js 	new file:   slip/0f959959e7cd08564ad87abe9f16e18f

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 NODE_ENV="development"
 
-MONGO_DB="mongodb+srv://lxauicexl:K5WR3wmO9WvHj6jL@stock.isjml.mongodb.net/imm_hotel"
+MONGO_DB="mongodb+srv://lxauicexl:2TzSZSYrjFr9fYZo@stock.isjml.mongodb.net/imm_hotel"
 
